corrijo errores de la landing page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -236,7 +236,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">¡Empieza ya!</a>
                     </div>
                   </div>
                 </div>
@@ -546,8 +546,4 @@
 
   </body>
 
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> adaf922401aac24b395c5b09c0c4a79696de3dcc
