--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -355,7 +355,7 @@
                     Entrenamiento completo del músculo pectoral.</p>
                   <div class="row">
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">Accede</a>
                     </div>
                   </div>
                 </div>
@@ -375,7 +375,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">Accede</a>
                     </div>
                   </div>
                 </div>
@@ -395,7 +395,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">Accede</a>
                     </div>
                   </div>
                 </div>
@@ -415,7 +415,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">Accede</a>
                     </div>
                   </div>
                 </div>
@@ -435,7 +435,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">Accede</a>
                     </div>
                   </div>
                 </div>
@@ -455,7 +455,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Add to cart</a>
+                      <a class="btn btn-dark" href="#">Accede</a>
                     </div>
                   </div>
                 </div>
@@ -463,7 +463,6 @@
             </div>
           </div>
         </div>
-
 
       </section>
 
