He arreglado el display y el header

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,7 +41,7 @@
   <body>
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand ml-3" href="#"><img src="./img/HT_Logo3.png" width="125" alt="" /></a>
+        <a class="navbar-brand ml-3 mb-5 mb-md-0" href="#"><img src="./img/HT_Logo3.png" width="125" alt="" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -467,10 +467,12 @@
       </section>
 
       <section id="comunidad" class="container-fluid">
-        <div class="container text-center text-white ">
-          <h2 class="display-2 font-weight-bold" ">Nuestra comunidad</h2>
+        <div class="row">
+          <div class="container text-center text-white ">
+            <h2 class="display-4 font-weight-bold" ">Nuestra comunidad</h2>
           <p id=" carousel__p"">Únite a nuestra comunidad para motivarte en tu ejercicio diario.</p>
-            <p><a class="btn btn-lg btn-dark font-weight-bold mt-5" href="#">Únete a nosotros</a></p>
+              <p><a class="btn btn-lg btn-dark font-weight-bold mt-5" href="#">Únete a nosotros</a></p>
+          </div>
         </div>
       </section>
 
