actualizo el tipo

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -250,7 +250,7 @@
         <!-- Top header -->
         <div class="w-50 px-3 py-3 pt-md-4 pb-md-4 mx-auto text-center">
           <h1 class=" font-weight-bold">Subscríbete</h1>
-          <p class="lead">Elige el plan que más se ajuste a tí y empieza a entrenar con nuestro contenido gratuito o premium.</p>
+          <p class="lead d-block">Elige el plan que más se ajuste a tí y empieza a entrenar con nuestro contenido gratuito o premium.</p>
         </div>
 
         <!-- Cards container -->
@@ -491,20 +491,20 @@
             <h5>Enlaces de acceso rápido</h5>
             <ul class="list-unstyled quick-links">
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i></i>Contáctanos</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Preguntas frecuentes</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Acerca de nosotros</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Política de privacidad</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i></i>Contáctanos</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Preguntas frecuentes</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Acerca de nosotros</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Política de privacidad</a></li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Home Training</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Entrenadores</a></li>
-              <li><a href="javascript:void();"><i class="bi bi-chevron-double-right"></i>Nuestra comunidad</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Entrenadores</a></li>
+              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Nuestra comunidad</a></li>
             </ul>
           </div>
         </div>
