--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,38 +10,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
 
-    <link rel="shortcut icon" href="./favicon/favicon-32x32.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon" />
     <title>Home Training</title>
+  
 
-    <!-- <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style> -->
     <!-- Custom styles CSS, Fonts and Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
 
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
   </head>
 
   <body>
     <header>
-      <nav id="navbar-color" class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand ml-3 mb-5 mb-md-0" href="#"><img src="./img/HT_Logo3.png" width="125" alt="" /></a>
+      <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
+        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="#"><img src="./img/HT_Logo3.png" width="125" alt="" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,7 +37,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="#">Rutinas</a>
+              <a class="nav-link mr-5" href="#">Programas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
             </li>
             <li class="nav-item mr-5">
               <a class="nav-link" href="#">Blog</a>
@@ -61,10 +49,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-3" href="#">Iniciar Sesion</a>
+              <a class="nav-link mr-3" href="./web-pages/login.html">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Regístrate</a>
+              <a class="nav-link" href="./web-pages/registro.html">Regístrate</a>
             </li>
           </ul>
         </div>
@@ -74,7 +62,7 @@
     <main role="main">
 
       <!-- Carousel -->
-      <section id="myCarousel" class="carousel slide" data-ride="carousel">
+      <section class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -130,29 +118,24 @@
           <span class="sr-only">Next</span>
         </a>
       </section>
-
       <!-- ./Carousel -->
 
-      <!-- Marketing messaging and featurettes
-  ================================================== -->
-      <!-- Wrap the rest of the page in another container to center all the content. -->
-
-      <section id="entrenadores" class="container marketing">
-        <h2 class="text-center pb-4 h1 text-white">Nuestros entrenadores</h2>
+      <!-- Personal trainers -->
+      <section id="entrenadores" class="container entrenador ">
+        <h2 class="text-center pb-5 h1 text-white">Entrenadores personales</h2>
 
         <!-- Three columns of text below the carousel -->
-        <div class="row">
+        <div class="row ">
 
-          <div class="col-lg-4 shadow pt-3">
-            <img class="img-responsive"
-              src="https://images.unsplash.com/photo-1621318740003-a2df86c07d54?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
+          <div class="col-lg-4 personal  pt-3 border-right">
+            <img class="img-responsive" src="https://images.pexels.com/photos/416809/pexels-photo-416809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
               width="200" class="d-block w-100" alt="Entrenadora 1" />
 
             <h2>Laura Ramírez</h2>
             <p>Una de las mejores entrenadoras personales, con mucha experiencia.</p>
             <p><a class="btn btn-dark font-weight-bold" href="#">Más info &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4 shadow pt-3">
+          <div class="col-lg-4 personal pt-3 border-right">
             <img class="img-responsive"
               src="https://images.unsplash.com/photo-1622107151292-d4309c81121c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHBlcnNvbmFsJTIwdHJhaW5lcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60"
               width="200" class="d-block w-100" alt="Entrenadora 2" />
@@ -161,28 +144,28 @@
             <p>Instructor certificado Fitness, especialista en ejercicio aeróbico y nutrición.</p>
             <p><a class="btn btn-dark font-weight-bold" href="#">Más info &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4 shadow pt-3">
-            <img class="img-responsive" src="https://images.pexels.com/photos/3775576/pexels-photo-3775576.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          <div class="col-lg-4 personal pt-3">
+            <img class="img-responsive" src="https://images.pexels.com/photos/4056534/pexels-photo-4056534.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
               width="200" class="d-block w-100" alt="Entrenadora 2" />
 
             <h2>Victoria Jones</h2>
-            <p>Licenciada en ciencias del deporte.</p>
+            <p>Licenciada en ciencias de la actividad física y el deporte.</p>
             <p><a class="btn btn-dark font-weight-bold" href="#">Más info &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
       </section>
-      <!-- /.container -->
+      <!-- /.personal trainers -->
 
+      <!-- Programas gratuitos -->
       <section id="programas" class="container-fluid mt-5">
         <h2 class=" text-center font-weight-bolder h1"> Programas gratuitos</h2>
         <p class="lead text-center ">Regístrate y empieza a entrenar gratis.</p>
-
 
         <div class="container mt-5">
 
           <div id="products" class="row view-group">
 
-            <div class="item col-xs-4 col-lg-4">
+            <article class="item col-xs-4 col-lg-4">
               <div class="thumbnail card">
                 <div class="img-event">
                   <img class="group list-group-image img-fluid"
@@ -190,7 +173,7 @@
                 </div>
                 <div class="caption card-body">
                   <h4 class="group card-title inner list-group-item-heading">
-                    Congestión</h4>
+                    Tonificación</h4>
                   <p class="group inner list-group-item-text">
                     Animáte a congestinar para un mejor crecimiento muscular.</p>
                   <div class="row">
@@ -201,8 +184,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="item col-xs-4 col-lg-4">
+            </article>
+            <article class="item col-xs-4 col-lg-4">
               <div class="thumbnail card">
                 <div class="img-event">
                   <img class="group list-group-image img-fluid"
@@ -221,12 +204,12 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="item col-xs-4 col-lg-4">
+            </article>
+            <article class="item col-xs-4 col-lg-4">
               <div class="thumbnail card">
                 <div class="img-event">
                   <img class="group list-group-image img-fluid"
-                    src="https://images.pexels.com/photos/4429138/pexels-photo-4429138.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="" />
+                    src="https://images.pexels.com/photos/6303729/pexels-photo-6303729.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="" />
                 </div>
                 <div class="caption card-body">
                   <h4 class="group card-title inner list-group-item-heading">
@@ -241,11 +224,13 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </article>
           </div>
         </div>
       </section>
+      <!-- ./Programas gratuitos -->
 
+      <!-- Subscripciones -->
       <section id="subscripcion">
         <!-- Top header -->
         <div class="w-50 px-3 py-3 pt-md-4 pb-md-4 mx-auto text-center">
@@ -257,9 +242,9 @@
         <div class="container text-center">
           <div class="row">
 
-            <!-- Card #1 -->
+            <!-- Card #1 Gratuito -->
             <div class="col-lg-4 col-md-6 col-sm-10 pb-4 d-block m-auto">
-              <div class="pricing-item" style="box-shadow: 0px 0px 30px -7px rgba(0,0,0,0.29);">
+              <div class="pricing-item border">
                 <!-- Indicator of subscription type -->
                 <div class="pt-4 pb-3" style="letter-spacing: 2px">
                   <h4>Gratuito</h4>
@@ -272,10 +257,10 @@
                 </div>
                 <!-- Perks of said subscription -->
                 <div class="pricing-description text-left">
-                  <ul class="list mt-3 mb-4">
-                    <li class="pl-3 pr-3">Acceso a nuestro contenido gratuito.</li>
-                    <li class="pl-3 pr-3">Regístrate sin tener que pagar ni dar tarjeta de crédito.</li>
-                  </ul>
+                  <div class="list mt-3 mb-4 ml-4">
+                    <p class="pl-3 pr-3">Acceso a nuestro contenido gratuito.</p>
+                    <p class="pl-3 pr-3">Regístrate sin tener que pagar ni dar tarjeta de crédito.</p>
+                  </div>
                 </div>
                 <!-- Button -->
                 <div class="pricing-button pb-4">
@@ -284,9 +269,9 @@
               </div>
             </div>
 
-            <!-- Card #2 -->
+            <!-- Card #2 Mensual -->
             <div class="col-lg-4 col-md-6 col-sm-10 pb-4 d-block m-auto">
-              <div class="pricing-item" style="box-shadow: 0px 0px 30px -7px rgba(0,0,0,0.29);">
+              <div class="pricing-item border">
                 <div class="pt-4 pb-3" style="letter-spacing: 2px">
                   <h4>Mensual</h4>
                 </div>
@@ -296,11 +281,11 @@
                   </h1>
                 </div>
                 <div class="pricing-description text-left">
-                  <ul class="list mt-3 mb-4">
-                    <li class="pl-3 pr-3">Todo lo gratuito más nuestro contenido premium.</li>
-                    <li class="pl-3 pr-3">Cancela en cualquier momento.</li>
+                  <div class="list mt-3 mb-4 ml-4">
+                    <p class="pl-3 pr-3">Todo lo gratuito más nuestro contenido premium.</p>
+                    <p class="pl-3 pr-3">Cancela en cualquier momento.</p>
 
-                  </ul>
+                  </div>
                 </div>
                 <div class="pricing-button pb-4">
                   <button type="button" class="btn btn-lg btn-dark w-75">¡Regístrate ahora!</button>
@@ -308,9 +293,9 @@
               </div>
             </div>
 
-            <!-- Card #3, Professional -->
+            <!-- Card #3, Anual -->
             <div class="col-lg-4 col-md-6 col-sm-10 pb-4 d-block m-auto">
-              <div class="pricing-item" style="box-shadow: 0px 0px 30px -7px rgba(0,0,0,0.29);">
+              <div class="pricing-item border">
                 <div class="pt-4 pb-3" style="letter-spacing: 2px">
                   <h4>Anual</h4>
                 </div>
@@ -320,11 +305,11 @@
                   </h1>
                 </div>
                 <div class="pricing-description text-left">
-                  <ul class="list mt-3 mb-4">
-                    <li class="pl-3 pr-3">Todo el contenido gratuito y primium más estrenos especiales.</li>
-                    <li class="pl-3 pr-3">Ahorra más de 50 €</li>
-                    <li class="pl-3 pr-3">Cancela en cualquier momento.</li>
-                  </ul>
+                  <div class="list mt-3 mb-4 ml-4">
+                    <p class="pl-3 pr-3">Todo el contenido gratuito y primium más estrenos especiales.</p>
+                    <p class="pl-3 pr-3">Ahorra más de 50 €</p>
+                    <p class="pl-3 pr-3">Cancela en cualquier momento.</p>
+                  </div>
                 </div>
                 <div class="pricing-button pb-4">
                   <button type="button" class="btn btn-lg btn-dark w-75">¡Regístrate ahora!</button>
@@ -334,7 +319,9 @@
           </div>
         </div>
       </section>
+      <!-- ./Subscripciones -->
 
+      <!-- Categorias -->
       <section id="categorias">
         <h2 class=" text-center font-weight-bolder h1"> Categorias</h2>
         <p class="lead text-center ">Nuestro catálogo de rutinas a demanda.</p>
@@ -352,10 +339,10 @@
                   <h4 class="group card-title inner list-group-item-heading">
                     Pecho</h4>
                   <p class="group inner list-group-item-text">
-                    Entrenamiento completo del músculo pectoral.</p>
+                    Entrenamiento completo de pectorales.</p>
                   <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Accede</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="#">Accede al registro</a>
                     </div>
                   </div>
                 </div>
@@ -374,8 +361,8 @@
                     Manten una espalda firme y fuerte.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Accede</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="#">Accede al registro</a>
                     </div>
                   </div>
                 </div>
@@ -394,8 +381,8 @@
                     Congestión de brazos.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Accede</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="#">Accede al registro</a>
                     </div>
                   </div>
                 </div>
@@ -414,8 +401,8 @@
                     Logra unos abdominales resistentes.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Accede</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="#">Accede al registro</a>
                     </div>
                   </div>
                 </div>
@@ -434,8 +421,8 @@
                     Consigue congestión y fuerza de piernas.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Accede</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="#">Accede al registro</a>
                     </div>
                   </div>
                 </div>
@@ -454,8 +441,8 @@
                     Fortalece tus hombros y trapecios.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">Accede</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="#">Accede al registro</a>
                     </div>
                   </div>
                 </div>
@@ -465,16 +452,29 @@
         </div>
 
       </section>
+      <!-- ./Categorias -->
 
+      <!-- Publicidad -->
+      <section id="publicitat" class="container-fluid">
+        <div class="row">
+          <div class="container d-flex flex-row justify-content-center alig-items-center">
+            <a href="https://www.decathlon.es" target="_blank" rel="noopener noreferrer"> <img src="./img/publicitat.png" alt="..."></a>
+          </div>
+        </div>
+      </section>
+      <!-- ./Publicidad -->
+
+      <!-- Nuestra comunidad -->
       <section id="comunidad" class="container-fluid">
         <div class="row">
           <div class="container text-center text-white ">
             <h2 class="display-4 font-weight-bold" ">Nuestra comunidad</h2>
-          <p id=" carousel__p"">Únite a nuestra comunidad para motivarte en tu ejercicio diario.</p>
+          <p id=" carousel__p">Únete a nuestra comunidad para motivarte en tu ejercicio diario.</p>
               <p><a class="btn btn-lg btn-dark font-weight-bold mt-5" href="#">Únete a nosotros</a></p>
           </div>
         </div>
       </section>
+      <!-- ./Nuestra comunidad -->
 
     </main>
 
@@ -538,13 +538,11 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- Carousel speed -->
-    <script>
+    <!-- <script>
       $('.carousel').carousel({
-        interval: 1000
+        interval: 3000
       })
-    </script>
-
-
+    </script> -->
   </body>
 
 </html>
