--- a/Frontend/web-pages/login.html
+++ b/Frontend/web-pages/login.html
@@ -64,7 +64,7 @@
         <div class="limit">
           <div class="login-container">
             <div class="bb-login">
-              <form class="bb-form validate-form"> <span class="bb-form-title p-b-26"> Inicio de sesión </span><span class="bb-form-title p-b-48"> <i
+              <form class="bb-form validate-form"> <span class="bb-form-title p-b-26 mb-5"> Inicio de sesión </span><span class="bb-form-title p-b-4"> <i
                     class="mdi mdi-symfony"></i> </span>
                 <div class="form-group col-md-12 validate-input" data-validate="Valid email is: a@b.c> <label for=" inputName">Email</label> <input
                     type="email" class="form-control" id="inputEmail4" placeholder="Inicie session con e-mail" required=""> </div>
@@ -76,7 +76,7 @@
                     title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> <span
                     class="bbb-input"></span> </div>
                 <div class="login-container-form-btn">
-                  <button class="btn btn-dark"> Iniciar sesión </button>
+                  <button class="btn btn-dark mt-5"> Iniciar sesión </button>
                 </div>
                 <div class="text-center p-t-115"> <span class="mr-2"> Aún no tiene registro realizado? </span> <a href="../web-pages/registro.html">
                     Regístrate </a> </div>
