--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -37,13 +37,13 @@
               <a class="nav-link mr-5 pr-5" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="#">Programas</a>
+              <a class="nav-link mr-5" href="./web-pages/buscar-rutina.html">Programas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
             </li>
             <li class="nav-item mr-5">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="./web-pages/crear-rutina.html">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
