Commit add administrador and modify dades d'entrenador

--- a/src/main/webapp/web-pages/entrenador.html
+++ b/src/main/webapp/web-pages/entrenador.html
@@ -57,6 +57,7 @@ and open the template in the editor.
                 <a class="nav-link" href="#">Contenido</a>
                <ul>
                 <li><a href="../web-pages/ModificarRutina.html">Modificar Rutina</a></li>
+                <li><a href="../web-pages/ModificarEntrenador.html">Datos personales</a></li>
                </ul> 
             </li>
           </ul>
