--- a/src/main/webapp/web-pages/crear-rutina.html
+++ b/src/main/webapp/web-pages/crear-rutina.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
 
-    <link href="../css/login.css" rel="stylesheet" />
+    <link href="../css/crear-rutina.css" rel="stylesheet" />
   </head>
 
   <body>
