--- a/src/main/webapp/web-pages/crear-rutina.html
+++ b/src/main/webapp/web-pages/crear-rutina.html
@@ -144,7 +144,14 @@
                         <input type="file" class="form-control-file" id="imatge">
                       </div>
                     </div>
-                    <button type="submit" id="boton" class="btn btn-dark btn-lg btn-block">Guardar Rutina</button>
+                       <hr class="mt-3 mb-4">
+                  <div class="col-12">
+                    <div class="d-flex flex-wrap justify-content-between align-items-center">
+                        <div class="custom-checkbox d-block">  </div>
+                       <button type="submit" id="boton" class="btn btn-dark btn-lg btn-block">Guardar Rutina</button>
+                    </div>
+                  </div>
+                    
                   </form>
                 </div>
               </div>
