--- a/src/main/webapp/web-pages/crear-rutina.html
+++ b/src/main/webapp/web-pages/crear-rutina.html
@@ -148,7 +148,7 @@
                   <div class="col-12">
                     <div class="d-flex flex-wrap justify-content-between align-items-center">
                         <div class="custom-checkbox d-block">  </div>
-                       <button type="submit" id="boton" class="btn btn-dark btn-lg btn-block">Guardar Rutina</button>
+                       <button type="submit" id="boton" class="btn btn-dark mt-3 mt-sm-0">Guardar Rutina</button>
                     </div>
                   </div>
                     
