--- a/src/main/webapp/web-pages/BajaUsuario.html
+++ b/src/main/webapp/web-pages/BajaUsuario.html
@@ -58,6 +58,7 @@ and open the template in the editor.
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="">Baja</a></li>
+                <li><a href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
