--- a/src/main/webapp/web-pages/ModificarRutina.html
+++ b/src/main/webapp/web-pages/ModificarRutina.html
@@ -50,8 +50,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Contenido</a>
                <ul>
-                <li><a href="../web-pages/crear-rutina.html">Crear Rutina</a></li>
+                <li><a href="../web-pages/ModificarEntrenador.html">Datos personales</a></li>
                 <li><a href="#">Modificar Rutina</a></li>
+                <li><a href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
