--- a/src/main/webapp/web-pages/ModificarUsuario.html
+++ b/src/main/webapp/web-pages/ModificarUsuario.html
@@ -53,6 +53,7 @@
                <ul>
                 <li><a href="#">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
+                <li><a href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
