--- a/src/main/webapp/web-pages/buscar-rutina-usuario.html
+++ b/src/main/webapp/web-pages/buscar-rutina-usuario.html
@@ -52,6 +52,7 @@
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
+                <li><a href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
