--- a/src/main/webapp/web-pages/cercar-rutina-entrenador.html
+++ b/src/main/webapp/web-pages/cercar-rutina-entrenador.html
@@ -51,6 +51,7 @@
                 <a class="nav-link" href="#">Contenido</a>
                <ul>
                 <li><a href="../web-pages/ModificarEntrenador.html">Datos personales</a></li>
+                <li><a href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
