--- a/src/main/webapp/web-pages/entrenador.html
+++ b/src/main/webapp/web-pages/entrenador.html
@@ -58,6 +58,7 @@ and open the template in the editor.
                <ul>
                 <li><a href="../web-pages/ModificarRutina.html">Modificar Rutina</a></li>
                 <li><a href="../web-pages/ModificarEntrenador.html">Datos personales</a></li>
+                <li><a href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
