--- a/src/main/webapp/web-pages/crear-rutina.html
+++ b/src/main/webapp/web-pages/crear-rutina.html
@@ -48,10 +48,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contenido</a>
+              <a class="nav-link" id="datos" href="#">Contenido</a>
              <ul>
               <li><a href="../web-pages/ModificarEntrenador.html">Datos personales</a></li>
-              <li><a href="../index.html">Log Out</a></li>
+              <li><a href="../index.html" id="logout">Log Out</a></li>
              </ul> 
           </li>
           </ul>
