--- a/src/main/webapp/web-pages/usuario.html
+++ b/src/main/webapp/web-pages/usuario.html
@@ -48,11 +48,11 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/ContactoLogado.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Datos</a>
+                <a class="nav-link" href="#" id="datos">Datos</a>
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
-                <li><a href="../index.html">Log Out</a></li>
+                <li><a id="logout" href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
