--- a/src/main/webapp/web-pages/BajaUsuario.html
+++ b/src/main/webapp/web-pages/BajaUsuario.html
@@ -54,12 +54,12 @@ and open the template in the editor.
               <a class="nav-link mr-5 pr-5" href="../web-pages/ContactoLogado.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Datos</a>
-               <ul>
+              <a class="nav-link" href="#" id="datos">Contenido</a>
+              <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="">Baja</a></li>
-                <li><a href="../index.html">Log Out</a></li>
-               </ul> 
+                <li><a id="logout" href="../index.html">Log Out</a></li>
+              </ul> 
             </li>
           </ul>
         </div>
