--- a/src/main/webapp/web-pages/ModificarUsuario.html
+++ b/src/main/webapp/web-pages/ModificarUsuario.html
@@ -49,11 +49,11 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/ContactoLogado.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Datos</a>
+              <a class="nav-link" href="#" id="datos">Contenido</a>
                <ul>
                 <li><a href="#">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
-                <li><a href="../index.html">Log Out</a></li>
+                <li><a id="logout" href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
