--- a/src/main/webapp/web-pages/RecordarContraseña.html
+++ b/src/main/webapp/web-pages/RecordarContraseña.html
@@ -49,10 +49,11 @@
             </li>
             <li class="nav-item">
               <a class="nav-link mr-3" href="../web-pages/login.html">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../web-pages/registro.html">Regístrate</a>
-            </li>
+              <ul>
+                <li >
+                 <a href="../web-pages/registro.html">Regístrate</a>
+               </li>
+          </ul>
           </ul>
         </div>
       </nav>
@@ -64,12 +65,12 @@
         <div class="limit">
           <div class="login-container">
             <div class="bb-login">
-              <form class="bb-form validate-form"> 
+              <form id="form" class="bb-form validate-form"> 
                   <span class="bb-form-title p-b-26 mb-5"> Recordar Contraseña </span>
                   <span class="bb-form-title p-b-4">
                   <i class="mdi mdi-symfony"></i> </span>
                 <div class="form-group col-md-12 validate-input"  inputName">
-                    <label for="inputName">DNI:</label> <input type="text" class="form-control" id="inputEmail4"
+                    <label for="inputName">DNI:</label> <input type="text" class="form-control" id="dni"
                         name="dni" placeholder="Introduzca su DNI" pattern="[0-9]{8}[A-Za-z]{1}" title="Debe poner 8 números y una letra" required>
                 </div>
 
@@ -78,16 +79,16 @@
                     <span class="btn-show-pass"> 
                         <i class="bi bi-eye-fill"></i>
                   </span> 
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Escriba su Contraseña" required
+                    <input type="password" class="form-control" id="password" placeholder="Escriba su Contraseña" 
                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
                 </div>
                   
                   <div class="form-group col-md-12"> 
-                    <label for="inputName">Repita la contrseña</label>
+                    <label for="inputName">Repita la contraseña</label>
                     <span class="btn-show-pass"> 
                         <i class="bi bi-eye-fill"></i>
                   </span> 
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Escriba su Contraseña" required
+                    <input type="password" class="form-control" id="passwordRep" placeholder="Escriba su Contraseña" 
                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
                 </div>
                   
@@ -160,11 +161,16 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
+
+        <!-- Carregar CDN axios -->
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <!-- Script de validació BajaUsuario.html -->
+        <script src="../js/recordarPassword.js"></script>
 
   </body>
 
