commit add inscripcio webapp

--- a/src/main/webapp/web-pages/ContactoLogado.html
+++ b/src/main/webapp/web-pages/ContactoLogado.html
@@ -36,7 +36,11 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/usuario.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="../web-pages/buscar-rutina-usuario.html">Programas</a>
+                <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
+               <ul>
+                <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
+                <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
+               </ul> 
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
@@ -48,7 +52,7 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Datos</a>
+                <a class="nav-link" href="#" id="datos">Datos</a>
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
