--- a/src/main/webapp/web-pages/Inscripcions.html
+++ b/src/main/webapp/web-pages/Inscripcions.html
@@ -19,8 +19,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
 
-    <link href="../css/ModificarUsuario.css" rel="stylesheet" />
-    <!-- <link href="../css/login.css" rel="stylesheet" /> -->
+    <link href="../css/rutina-inscripcio.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -40,7 +39,7 @@
                 <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
                <ul>
                 <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
-                <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
+                <li><a href="#">Inscripciones</a></li>
                </ul> 
             </li>
             <li class="nav-item">
@@ -53,9 +52,9 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/ContactoLogado.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="datos">Contenido</a>
+                <a class="nav-link" href="#" id="datos">Datos</a>
                <ul>
-                <li><a href="#">Modificar datos</a></li>
+                <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
                 <li><a id="logout" href="../index.html">Log Out</a></li>
                </ul> 
@@ -64,74 +63,36 @@
         </div>
       </nav>
     </header>
-
-    <main>
-
-      <section id="modificar" class="container">
-
+       <main>
+           <section id="crear-rutina" class="container">
+      <!-- Inscripciones -->
         <div class="card signup_v4 mb-30">
           <div class="card-body">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item" role="presentation"> <a class="nav-link active" id="login-tab" data-toggle="tab" href="#login" role="tab"
-                  aria-controls="login" aria-selected="true" style="text-transform: uppercase;">Modifica tus datos</a> </li>
+                  aria-controls="login" aria-selected="true" style="text-transform: uppercase;">Tus inscripciones</a> </li>
             </ul>
             <div class="tab-content" id="myTabContent">
               <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
-                <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Modificar datos</h4>
-                <form id="form">
-                  <div class="form-row">
-                    <div class="form-group col-md-12"> <label for="nom">Nombre</label> <input type="text" class="form-control" name="nom" id="nom"
-                         required=""> </div>
-                    <div class="form-group col-md-12"> <label for="cognom1">Primer apellido</label> <input type="text" class="form-control" name="cognom1"
-                        id="cognom1"  required=""> </div>
-                    <div class="form-group col-md-12"> <label for="cognom2">Segundo apellido</label> <input type="text" class="form-control" name="cognom2"
-                        id="cognom2"  required=""> </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="form-group col-md-12"> <label for="email">Correo electrónico</label> <input type="email" class="form-control" name="email"
-                        id="email"  required=""> </div>
+                <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Visualize o elimine sus inscripciones</h4>
 
-                    <div class="form-group col-md-12"> <label for="telefon">Teléfono de contacto</label> <input type="tel" class="form-control" name="telefon"
-                        id="telefon" minlength="9" maxlength="11" required>
-                    </div>
-
-                    <div class="form-group col-md-12"> <label for="adreca">Dirección</label> <input type="text" class="form-control" name="adreca"
-                        id="adreca"  required="" size="100"> </div>
-
-                    <div class="form-group col-md-12"> <label for="codpost">Código Postal</label> <input type="number" class="form-control" name="codpost"
-                        id="cp"  minlength="5" > </div>
-
-                    <div class="form-group col-md-12"> <label for="poblacio">Población</label> <input type="text" class="form-control" name="poblacio"
-                        id="poblacio"  required=""> </div>
-
-                    <div class="form-group col-md-12"> <label for="provincia">Provincia</label> <input type="text" class="form-control" name="provincia"
-                        id="provincia"  required=""> </div>
-
-                    <div class="form-group col-md-12"> <label for="password">Contraseña Nueva</label> <span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i></span><input type="password" class="form-control" name="password"
-                        id="password" placeholder="Escriba su Contraseña"  
-                        title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="form-group col-md-12"> <label for="passwordRep">Confirme la contraseña Nueva</label> <input type="password"
-                        class="form-control" name="passwordRep" id="passwordRep" placeholder="Escriba otra vez su contraseña" 
-                        title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
-                  </div>
-                  
-                  <hr class="mt-3 mb-4">
-                  <div class="col-12">
-                    <div class="d-flex flex-wrap justify-content-between align-items-center">
-                        <div class="custom-checkbox d-block">  </div>
-                       <button class="btn btn-dark mt-3 mt-sm-0" type="submit">Modificar datos</button>
-                    </div>
-                  </div>
-                </form>
-
+              <div class="row red">
+                  <label for="nombre" class="espacio">Nombre</label>
+                  <label for="descripcion" class="espacio">Ver</label>
+                  <label for="descripcion" class="espacio">Eliminar</label>
               </div>
-              </div>
-            </div>
+              <hr class="mt-3 mb-4">
+              <form>
+
+              </form>
           </div>
         </div>
+          </div>
+        </div>
+        <!-- ./inscripciones -->
+
+      
+
       </section>
 
     </main>
@@ -194,13 +155,14 @@
       crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
 
-          <!-- Carregar CDN axios -->
+    <!-- Carregar CDN axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- Script de validació ModificarUsuario.html -->
-    <script src="../js/modificarUsuari.js"></script>
+    <!-- Script de validació Buscar-rutina.html -->
+    <script src="../js/cercar-rutina-entrenador.js"></script>
 
   </body>
 
