--- a/src/main/webapp/web-pages/usuario.html
+++ b/src/main/webapp/web-pages/usuario.html
@@ -36,7 +36,11 @@
               <a class="nav-link mr-5 pr-5" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="../web-pages/buscar-rutina-usuario.html">Programas</a>
+                <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
+               <ul>
+                <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
+                <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
+               </ul> 
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
