commit add Accessori i modalitat webapp i js

--- a/src/main/webapp/web-pages/entrenador.html
+++ b/src/main/webapp/web-pages/entrenador.html
@@ -76,7 +76,7 @@ and open the template in the editor.
                     <div class="col-lg-4 personal pt-3 border-right">
                         <img class="img-responsive"
                           src="https://i.pinimg.com/564x/a0/f8/01/a0f801f4d1526b955e92d1d56f4db710.jpg"
-                          width="200" height="300" class="d-block w-100" alt="CercarRutina" />
+                          width="200" height="300" class="d-block w-100" alt="Crear rutinas" />
                         <h2>Crear Rutinas</h2>
                         <p><a class="btn btn-dark font-weight-bold" href="../web-pages/crear-rutina.html">Crea tus rutinas</a></p>
                     </div>
@@ -84,7 +84,7 @@ and open the template in the editor.
                     <div class="col-lg-4 personal pt-3 border-right">
                         <img class="img-responsive"
                           src="https://i.pinimg.com/564x/86/be/87/86be87570f44ca5913c88b42cd629576.jpg"
-                          width="200" height="300" class="d-block w-100" alt="CercarRutina" />
+                          width="200" height="300" class="d-block w-100" alt="Buscador de rutinas" />
                         <h2>Cercador de Rutinas</h2>
                         <p><a class="btn btn-dark font-weight-bold" href="../web-pages/cercar-rutina-entrenador.html">Cerca les teves rutines</a></p>
                     </div>
