--- a/src/main/webapp/web-pages/ContactoLogado.html
+++ b/src/main/webapp/web-pages/ContactoLogado.html
@@ -52,7 +52,7 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="datos">Datos</a>
+                <a class="nav-link" href="#">Datos</a>
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
@@ -77,25 +77,26 @@
                     <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
                         <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Selecciona un contacto</h4>
 
-                        <form>
+                        <form id="form">
                             <div class="row ">
                               <div class="form-group col-md-12">
                                 <label for="">Tipo de contacto</label>
-                                <select class="form-control" id="exampleFormControlSelect1" required>
-                                  <option>Suggerimiento</option>
-                                  <option>Duda</option>
-                                  <option>Queja</option>
-                                  <option>Bug</option>
+                                <select class="form-control" id="contacto" required>
+                                  <option>Escoge una opcion</option>
+                                  <option id="suggeriment" name="suggeriment">Suggerimiento</option>
+                                  <option id="dubte" name="dubte">Duda</option>
+                                  <option id="queixa" name="queixa">Queja</option>
+                                  <option id="bug" name="bug">Bug</option>
                                 </select>
                               </div>
 
                               <div class="form-group col-md-12"> 
-                                  <label for="inputName">Título</label> <input type="text" class="form-control" id="inputEmail4" placeholder="Nombre del título" required=""> 
+                                  <label for="inputName">Título</label> <input type="text" class="form-control" id="titulo" placeholder="Nombre del título" required=""> 
                               </div>
 
                               <div class="form-group col-md-12"> 
                                   <label for="inputName">Descripción</label> 
-                                  <textarea class="form-control col-12" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe aquí la descripción" required></textarea>
+                                  <textarea class="form-control col-12" id="descripcio" rows="3" placeholder="Escribe aquí la descripción" required></textarea>
                               </div>
 
 
@@ -105,7 +106,7 @@
                             <div class="d-flex flex-wrap justify-content-between align-items-center">
                                 <div class="custom-checkbox d-block">  </div>
                                 <button class="btn btn-dark mt-3 mt-sm-0" type="submit">Enviar</button>
-                            </div>
+                            </div>onta
                         </form>
 
                   </div>
@@ -177,6 +178,11 @@
 
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
+
+    <!-- Carregar CDN axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de crear-rutina.html -->
+    <script src="../js/contacto.js"></script>
 
   </body>
 
