--- a/src/main/webapp/web-pages/EliminarAccesorio.html
+++ b/src/main/webapp/web-pages/EliminarAccesorio.html
@@ -48,7 +48,7 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contenido</a>
+                <a class="nav-link" id="datos" href="#">Contenido</a>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
 
       <section id="eliminar-modalidad" class="container">
 
-        <!-- Modalidades -->
+        <!-- Accessorio -->
         <div class="card signup_v4 mb-30">
           <div class="card-body">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -76,14 +76,21 @@
                   <label for="descripcion" class="espacio">Eliminar</label>
               </div>
                                   <hr class="mt-3 mb-4">
-              <form>
+              <form id="form">
 
               </form>
           </div>
         </div>
           </div>
         </div>
-        <!-- ./Modalidades -->
+        <!-- ./Accessorio -->
+        <template id="template">
+          <div class="row">
+            <label id="nombre" for="nombre" class="espacio"></label>
+            <label  id="descripcion" for="descripcion" class="espacio"></label>
+            <button type="submit" class="btn btn-dark mt-3 mt-sm-0 btn-s espacio">Eliminar</button>
+          </div>
+        </template>
 
       </section>
 
@@ -150,6 +157,12 @@
 
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
+
+  
+    <!-- Carregar CDN axios -->
+     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de crear-rutina.html -->
+    <script src="../js/eliminaAccessori.js"></script>
 
   </body>
 
