--- a/src/main/webapp/web-pages/ContactoLogado.html
+++ b/src/main/webapp/web-pages/ContactoLogado.html
@@ -25,7 +25,9 @@
   <body>
         <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
-        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
+        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/usuario.html">
+            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,11 +54,11 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Datos</a>
+                <a class="nav-link" id="datos" href="#">Datos</a>
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
-                <li><a href="../index.html">Log Out</a></li>
+                <li><a href="../index.html" id="logout">Log Out</a></li>
                </ul> 
             </li>
           </ul>
@@ -83,7 +85,7 @@
                                 <label for="">Tipo de contacto</label>
                                 <select class="form-control" id="contacto" required>
                                   <option>Escoge una opcion</option>
-                                  <option id="suggeriment" name="suggeriment">Suggerimiento</option>
+                                  <option id="suggeriment" name="suggeriment">Sugerimiento</option>
                                   <option id="dubte" name="dubte">Duda</option>
                                   <option id="queixa" name="queixa">Queja</option>
                                   <option id="bug" name="bug">Bug</option>
@@ -106,7 +108,7 @@
                             <div class="d-flex flex-wrap justify-content-between align-items-center">
                                 <div class="custom-checkbox d-block">  </div>
                                 <button class="btn btn-dark mt-3 mt-sm-0" type="submit">Enviar</button>
-                            </div>onta
+                            </div>
                         </form>
 
                   </div>
@@ -122,15 +124,17 @@
       <div class="container">
         <div class="row text-center text-xs-center text-sm-left text-md-left">
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <a class="navbar-brand ml-3 pb-5 mb-1" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
+              <a class="navbar-brand ml-3 pb-5 mb-1" href="../web-pages/usuario.html">
+                <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+            </a>
             <p><i class="bi bi-telephone-fill"></i> +34 777 777 777 </p>
             <p><i class="bi bi-envelope-fill"></i> info@hometraining.com </p>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Enlaces de acceso rápido</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i></i>Contáctanos</a></li>
+              <li><a href="../index.html"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
+              <li><a href="../web-pages/ContactoLogado.html"><i class="bi bi-chevron-double-right"></i></i>Contáctanos</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Preguntas frecuentes</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Acerca de nosotros</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Política de privacidad</a></li>
@@ -139,9 +143,9 @@
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Home Training</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
+              <li><a href="../web-pages/login.html"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
+              <li><a href="../web-pages/registro.html"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
+              <li><a href="../web-pages/buscar-rutina.html"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Entrenadores</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Nuestra comunidad</a></li>
             </ul>
@@ -151,12 +155,12 @@
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5 mb-3">
             <p class="h5 text-center pb-2">Síguenos en nuestras redes sociales</p>
             <ul class="list-unstyled list-inline social text-center">
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-facebook"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-twitter"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-instagram"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-youtube"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-twitch"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-pinterest"></i></a></li>
+              <li class="list-inline-item"><a href="https://es-es.facebook.com/"><i class="bi bi-facebook"></i></a></li>
+              <li class="list-inline-item"><a href="https://twitter.com/?lang=es"><i class="bi bi-twitter"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.twitch.tv/"><i class="bi bi-twitch"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.pinterest.es/"><i class="bi bi-pinterest"></i></a></li>
             </ul>
           </div>
         </div>
