darrera versio frontend

--- a/src/main/webapp/web-pages/ModificarUsuario.html
+++ b/src/main/webapp/web-pages/ModificarUsuario.html
@@ -37,11 +37,7 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/usuario.html">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
-               <ul>
-                <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
-                <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
-               </ul> 
+              <a class="nav-link mr-5" href="../web-pages/buscar-rutina-usuario.html">Programas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
@@ -107,8 +103,7 @@
                     <div class="form-group col-md-12"> <label for="provincia">Provincia</label> <input type="text" class="form-control" name="provincia"
                         id="provincia"  required=""> </div>
 
-                    <div class="form-group col-md-12"> <label for="password">Contraseña Nueva</label> <span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i></span><input type="password" class="form-control" name="password"
+                    <div class="form-group col-md-12"> <label for="password">Contraseña Nueva</label> <span class="btn-show-pass"> <i class="bi bi-eye-fill"></i></span><input type="password" class="form-control" name="password"
                         id="password" placeholder="Escriba su Contraseña"  
                         title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
                   </div>
