--- a/src/main/webapp/web-pages/cercar-rutina-entrenador.html
+++ b/src/main/webapp/web-pages/cercar-rutina-entrenador.html
@@ -77,12 +77,12 @@
           </div>
           <template id="template-card">
             <div class="col-12 mb-2 col-md-4">
-              <div class="card">
+              <div class="card">-
                 <img src="#" alt="" class="card-img-top">
                 <div class="card-body">
                   <h5>Rutina</h5>
                   <p>Descripcio</p>
-                  <button id="modificarRutina" class="btn btn-dark"><a href="" id="modificarRutina">Modificar</a></button>
+                  <button id="modificarRutina" class="btn btn-dark"><a href="" >Modificar</a></button>
                 </div>
               </div>
             </div>
