--- a/src/main/webapp/web-pages/ModificarEntrenador.html
+++ b/src/main/webapp/web-pages/ModificarEntrenador.html
@@ -25,7 +25,9 @@
   <body>
        <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
-        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
+        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/entrenador.html">
+            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,10 +50,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contenido</a>
+                <a id="datos" class="nav-link" href="#">Contenido</a>
                <ul>
                 <li><a href="#">Datos personales</a></li>
-                <li><a href="../index.html">Log Out</a></li>
+                <li><a id="logout" href="../index.html">Log Out</a></li>
                </ul> 
             </li>
           </ul>
@@ -72,41 +74,40 @@
             <div class="tab-content" id="myTabContent">
               <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
                 <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Modificar datos</h4>
-                <form>
+                <form id="form">
                   <div class="form-row">
-                    <div class="form-group col-md-12"> <label for="inputName">Nombre</label> <input type="text" class="form-control" id="inputEmail4"
+                    <div class="form-group col-md-12"> <label for="nom">Nombre</label> <input type="text" name="nom" class="form-control" id="nom"
                          required=""> </div>
-                    <div class="form-group col-md-12"> <label for="inputName">Primer apellido</label> <input type="text" class="form-control"
-                        id="inputPassword4"  required=""> </div>
-                    <div class="form-group col-md-12"> <label for="inputName">Segundo apellido</label> <input type="text" class="form-control"
-                        id="inputPassword4"  required=""> </div>
+                    <div class="form-group col-md-12"> <label for="cognom1">Primer apellido</label> <input type="text" name="cognom1" class="form-control"
+                        id="cognom1"  required=""> </div>
+                    <div class="form-group col-md-12"> <label for="cognom2">Segundo apellido</label> <input type="text" name="cognom2" class="form-control"
+                        id="cognom2"  required=""> </div>
                   </div>
                   <div class="form-row">
-                    <div class="form-group col-md-12"> <label for="inputName">Correo electrónico</label> <input type="email" class="form-control"
-                        id="inputEmail4"  required=""> </div>
+                    <div class="form-group col-md-12"> <label for="email">Correo electrónico</label> <input type="email" name="email" class="form-control"
+                        id="email"  required=""> </div>
 
-                    <div class="form-group col-md-12"> <label for="inputName">Teléfono de contacto</label> <input type="tel" class="form-control"
-                        id="phone" name="phone"  pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" minlength="11" maxlength="11" required>
+                    <div class="form-group col-md-12"> <label for="telefon">Teléfono de contacto</label> <input type="tel"  name="telefon" class="form-control"
+                      id="telefon" minlength="9" maxlength="11" required>
                     </div>
 
-                    <div class="form-group col-md-12"> <label for="inputName">Dirección</label> <input type="text" class="form-control"
-                        id="inputEmail4"  required="" size="100"> </div>
+                    <div class="form-group col-md-12"> <label for="adreca">Dirección</label> <input type="text" name="adreca" class="form-control"
+                        id="adreca"  required="" size="100"> </div>
 
 
-                    <div class="form-group col-md-12"> <label for="inputName">Población</label> <input type="text" class="form-control"
-                        id="inputEmail4"  required=""> </div>
+                    <div class="form-group col-md-12"> <label for="poblacio">Población</label> <input type="text" name="poblacio" class="form-control"
+                        id="poblacio"  required=""> </div>
 
-                    <div class="form-group col-md-12"> <label for="inputName">Provincia</label> <input type="text" class="form-control"
-                        id="inputEmail4"  required=""> </div>
+                    <div class="form-group col-md-12"> <label for="provincia">Provincia</label> <input type="text" name="provincia" class="form-control"
+                        id="provincia"  required=""> </div>
 
-                    <div class="form-group col-md-12"> <label for="inputName">Contraseña Nueva</label> <input type="password" class="form-control"
-                        id="inputPassword4" placeholder="Escriba su Contraseña"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    <div class="form-group col-md-12"> <label for="password">Contraseña Nueva</label> <span class="btn-show-pass"> <i class="bi bi-eye-fill"></i></span><input type="password" class="form-control"
+                        id="password" placeholder="Escriba su Contraseña"  name="password"
                         title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
                   </div>
                   <div class="form-row">
-                    <div class="form-group col-md-12"> <label for="inputName">Confirme la contraseña Nueva</label> <input type="password"
-                        class="form-control" id="inputPassword4" placeholder="Escriba otra vez su contraseña" 
-                        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    <div class="form-group col-md-12"> <label for="passwordRep">Confirme la contraseña Nueva</label> <input type="password"
+                        class="form-control" id="passwordRep" placeholder="Escriba otra vez su contraseña" name="passwordRep"
                         title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
                   </div>
                   
@@ -133,14 +134,16 @@
       <div class="container">
         <div class="row text-center text-xs-center text-sm-left text-md-left">
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <a class="navbar-brand ml-3 pb-5 mb-1" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
+              <a class="navbar-brand ml-3 pb-5 mb-1" href="../web-pages/entrenador.html">
+                <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+            </a>
             <p><i class="bi bi-telephone-fill"></i> +34 777 777 777 </p>
             <p><i class="bi bi-envelope-fill"></i> info@hometraining.com </p>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Enlaces de acceso rápido</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
+              <li><a href="../index.html"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i></i>Contáctanos</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Preguntas frecuentes</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Acerca de nosotros</a></li>
@@ -150,9 +153,9 @@
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Home Training</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
+              <li><a href="../web-pages/login.html"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
+              <li><a href="../web-pages/registro.html"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
+              <li><a href="../web-pages/buscar-rutina.html"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Entrenadores</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Nuestra comunidad</a></li>
             </ul>
@@ -162,12 +165,12 @@
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5 mb-3">
             <p class="h5 text-center pb-2">Síguenos en nuestras redes sociales</p>
             <ul class="list-unstyled list-inline social text-center">
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-facebook"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-twitter"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-instagram"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-youtube"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-twitch"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-pinterest"></i></a></li>
+              <li class="list-inline-item"><a href="https://es-es.facebook.com/"><i class="bi bi-facebook"></i></a></li>
+              <li class="list-inline-item"><a href="https://twitter.com/?lang=es"><i class="bi bi-twitter"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.twitch.tv/"><i class="bi bi-twitch"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.pinterest.es/"><i class="bi bi-pinterest"></i></a></li>
             </ul>
           </div>
         </div>
@@ -186,6 +189,14 @@
       crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+    <!-- Custom scripts -->
+    <script src="../js/login.js"></script>
+
+    <!-- Carregar CDN axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de crear-rutina.html -->
+    <script src="../js/modificarEntrenador.js"></script>
 
 
   </body>
