commit Entrega Final

--- a/src/main/webapp/web-pages/Inscripcions.html
+++ b/src/main/webapp/web-pages/Inscripcions.html
@@ -166,7 +166,7 @@
     <!-- Carregar CDN axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Script de validació Buscar-rutina.html -->
-    <script src="../js/cercar-rutina-entrenador.js"></script>
+    <script src="../js/inscripcionsUsuari.js"></script>
 
   </body>
 
