--- a/src/main/webapp/web-pages/ModificarEntrenador.html
+++ b/src/main/webapp/web-pages/ModificarEntrenador.html
@@ -191,6 +191,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
+      <!-- Custom scripts -->
+    <script src="../js/login.js"></script>
+
+    <!-- Carregar CDN axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de crear-rutina.html -->
+    <script src="../js/modificarEntrenador.js"></script>
 
   </body>
 
