--- a/src/main/webapp/web-pages/crear-rutina-administrador.html
+++ b/src/main/webapp/web-pages/crear-rutina-administrador.html
@@ -26,8 +26,8 @@
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/administrador.html">
-            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-        </a>
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -50,10 +50,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="datos">Contenido</a>
-               <ul>
-                <li><a id="logout" href="../index.html">Log Out</a></li>
-               </ul> 
+                <a class="nav-link" id="datos" href="#">Contenido</a>
+                <ul>
+                  <li><a id="logout" href="../index.html">Log Out</a></li>
+                 </ul> 
             </li>
           </ul>
         </div>
@@ -134,6 +134,7 @@
                         <label for="">Preu</label>
                             <select class="form-control" id="preu">
                               <option selected>Selecciona el precio para la rutina</option>
+                              <option>0</option>
                               <option>20</option>
                               <option>30</option>
                               <option>40</option>
