--- a/src/main/webapp/web-pages/Inscripcions.html
+++ b/src/main/webapp/web-pages/Inscripcions.html
@@ -79,8 +79,8 @@
                 <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Visualize o elimine sus inscripciones</h4>
 
               <div class="row red">
-                  <label for="nombre" class="espacio">Nombre</label>
-                  <label for="descripcion" class="espacio">Ver</label>
+                  <label for="nombre" class="espacio">Rutina</label>
+                  <label for="descripcion" class="espacio">Acceso</label>
                   <label for="descripcion" class="espacio">Eliminar</label>
               </div>
               <hr class="mt-3 mb-4">
@@ -92,9 +92,10 @@
               <!-- Presentacion de programas -->
               <template id="template">
                 <div class="row" >
-                  <label id="nombre" for="nombre" class="espacio"></label>
-                  <button  class="btn btn-white espacio" ><a href="" id="verRutina">Ver</a></button>
-                  <button class="btn btn-dark espacio"><a href=""  id="eliminarRutina">Eliminar</a></button>                </div>
+                  <label id="nombre" for="nombre" class="espacio text-success"></label>
+                  <button  class="btn btn-primary m-1 espacio" id="ver">Ver</a></button>
+                  <button class="btn btn-danger m-1 espacio" id="eliminar">Eliminar</a></button>                
+                </div>
               </template>
             </div>
         <!-- ./Programas -->
@@ -118,9 +119,9 @@
       <div class="container">
         <div class="row text-center text-xs-center text-sm-left text-md-left">
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <a class="navbar-brand ml-3 pb-5 mb-1" href="../web-pages/usuario.html">
-              <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-          </a>
+              <a class="navbar-brand ml-3 pb-5 mb-1" href="../web-pages/usuario.html">
+                <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+            </a>
             <p><i class="bi bi-telephone-fill"></i> +34 777 777 777 </p>
             <p><i class="bi bi-envelope-fill"></i> info@hometraining.com </p>
           </div>
