--- a/src/main/webapp/web-pages/buscar-rutina.html
+++ b/src/main/webapp/web-pages/buscar-rutina.html
@@ -26,8 +26,8 @@
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../index.html">
-            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-        </a>
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -132,7 +132,36 @@
                 <div class="card-body">
                   <h5>Rutina</h5>
                   <p>Descripcio</p>
-                  <button class="btn btn-dark">Seleccionar</button>
+                  <!-- <button class="btn btn-dark">Seleccionar</button> -->
+                </div>
+              </div>
+            </div>
+          </template>
+        </div>
+        <!-- ./Programas -->
+
+      </section>
+
+    </main>
+
+        <!-- Programas -->
+        <div class="rutinas-container">
+          <div class="mensaje-error">
+            <p id="missatgeError">Programa no encontrado con estos criterios de búsqueda</p>
+            <p id="ProgramesEscollits"></p>
+          </div>
+          <div class="rutinas-container__display">
+            <div class="row" id="items">
+            </div>
+            <!-- Presentacion de programas -->
+          </div>
+          <template id="template-card">
+            <div class="col-12 mb-2 col-md-4">
+              <div class="card">
+                <img src="#" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h5>Rutina</h5>
+                  <p>Descripcio</p>
                 </div>
               </div>
             </div>
@@ -214,7 +243,7 @@
     <script src="../js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Script de validació Buscar-rutina.html -->
-    <script src="../js/seleccio_rutina.js"></script>
+    <script src="../js/seleccio_rutina_nologat.js"></script>
 
   </body>
 
