--- a/src/main/webapp/web-pages/cercar-rutina-entrenador.html
+++ b/src/main/webapp/web-pages/cercar-rutina-entrenador.html
@@ -25,7 +25,9 @@
   <body>
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
-        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
+        <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/entrenador.html">
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -66,10 +68,7 @@
        
         <!-- Programas -->
         <div class="rutinas-container">
-          <!-- <div class="mensaje-error">
-            <p id="missatgeError">Programes de l'Entrenador <span id="autorProgramas"></span></p>
-            <p id="ProgramesEscollits"></p>
-          </div> -->
+
           <div class="rutinas-container__display">
             <div class="row" id="items">
             </div>
@@ -77,12 +76,12 @@
           </div>
           <template id="template-card">
             <div class="col-12 mb-2 col-md-4">
-              <div class="card">-
+              <div class="card" id="card" >
                 <img src="#" alt="" class="card-img-top">
                 <div class="card-body">
                   <h5>Rutina</h5>
                   <p>Descripcio</p>
-                  <button id="modificarRutina" class="btn btn-dark"><a href="" >Modificar</a></button>
+                  <button class="btn btn-dark" >Modificar</button>
                 </div>
               </div>
             </div>
@@ -99,14 +98,16 @@
       <div class="container">
         <div class="row text-center text-xs-center text-sm-left text-md-left">
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <a class="navbar-brand ml-3 pb-5 mb-1" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
+              <a class="navbar-brand ml-3 pb-5 mb-1" href="../web-pages/entrenador.html">
+                <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+            </a>
             <p><i class="bi bi-telephone-fill"></i> +34 777 777 777 </p>
             <p><i class="bi bi-envelope-fill"></i> info@hometraining.com </p>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Enlaces de acceso rápido</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
+              <li><a href="../index.html"><i class="bi bi-chevron-double-right"></i>Inicio</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i></i>Contáctanos</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Preguntas frecuentes</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Acerca de nosotros</a></li>
@@ -116,9 +117,9 @@
           <div class="col-xs-12 col-sm-4 col-md-4">
             <h5>Home Training</h5>
             <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
-              <li><a href="#"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
+              <li><a href="../web-pages/login.html"><i class="bi bi-chevron-double-right"></i>Iniciar sesión</a></li>
+              <li><a href="../web-pages/registro.html"><i class="bi bi-chevron-double-right"></i>Regístrate</a></li>
+              <li><a href="../web-pages/buscar-rutina.html"><i class="bi bi-chevron-double-right"></i>Rutinas</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Entrenadores</a></li>
               <li><a href="#"><i class="bi bi-chevron-double-right"></i>Nuestra comunidad</a></li>
             </ul>
@@ -128,12 +129,12 @@
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5 mb-3">
             <p class="h5 text-center pb-2">Síguenos en nuestras redes sociales</p>
             <ul class="list-unstyled list-inline social text-center">
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-facebook"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-twitter"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-instagram"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-youtube"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-twitch"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="bi bi-pinterest"></i></a></li>
+              <li class="list-inline-item"><a href="https://es-es.facebook.com/"><i class="bi bi-facebook"></i></a></li>
+              <li class="list-inline-item"><a href="https://twitter.com/?lang=es"><i class="bi bi-twitter"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.twitch.tv/"><i class="bi bi-twitch"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.pinterest.es/"><i class="bi bi-pinterest"></i></a></li>
             </ul>
           </div>
         </div>
