--- a/src/main/webapp/web-pages/InscripcioRutina.html
+++ b/src/main/webapp/web-pages/InscripcioRutina.html
@@ -148,8 +148,8 @@
                     </div>
                     <div class="row">
                         
-                        <h3 class=" col-md-8 mt-4">Descrpció</h3>
-                        <label for="descrpcio" class="mt-4" id="descrpcio"></label>
+                        <h3 class=" col-md-8 mt-4">Descripció</h3>
+                        <label for="descripcio" class="mt-4" id="descripcio"></label>
                     
                     </div>
                     <div class="col-12">
@@ -236,12 +236,12 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <!--
     <!-- Custom scripts -->
-    <!--<script src="../js/login.js"></script>
+    <script src="../js/login.js"></script>
 
     <!-- Carregar CDN axios -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Script de validació Buscar-rutina.html -->
-    <!--<script src="../js/usuario.js"></script>-->
+    <script src="../js/inscripcionsRutina.js"></script>
 
   </body>
 
