--- a/src/main/webapp/web-pages/Inscripcions.html
+++ b/src/main/webapp/web-pages/Inscripcions.html
@@ -96,7 +96,14 @@
                   <button  class="btn btn-primary m-1 espacio" id="ver">Ver</a></button>
                   <button class="btn btn-danger m-1 espacio" id="eliminar">Eliminar</a></button>                
                 </div>
+
               </template>
+              <div class="row">
+                <h4 class="mx-auto" id="totalPreu"></h4>
+                </div>
+                <div class="row">
+                  <h4 class="mx-auto" id="totalDuracio"></h4>
+              </div>
             </div>
         <!-- ./Programas -->
               <form>
